--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-<!doctype html>
+<html>
 <html lang="en" data-bs-theme="auto">
   <head>
     <meta charset="utf-8">
@@ -92,7 +92,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="css/signup-styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
@@ -101,7 +101,7 @@
         <form action="/signup" method="post" >
           <img class="mb-4" src="images/logo.svg" alt="" width="100" height="100">
           <h1 class="h3 mb-4 fw-normal white">Sign in to Play</h1>
-          <!-- <input type="hidden" value=> -->
+          
           <div class="form-floating">
             <input type="text" name="name" class="form-control top" id="floatingInput" placeholder="First Name" required autofocus>
             <label for="floatingInput">Name</label>
@@ -110,6 +110,9 @@
             <input type="email" name="email" class="form-control bottom" id="floatingEmail" placeholder="name@example.com" required>
             <label for="floatingEmail">Email</label>
           </div>
+
+          <input type="hidden" name="gameCalled" value="<%= game %>">
+
           <a href="flappy"><button class="w-100 btn btn-lg btn-outline-primary" type="submit">Continue</button></a>
           <p class="mt-5 mb-3 text-body-secondary white">&copy; Arcade Arena</p>
         </form>
