--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,11 +8,9 @@
     <meta name="generator" content="Hugo 0.111.3">
     <title>Signup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/"> -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;">
-<!-- <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
+    <meta http-equiv="Content-Security-Policy" content="style-src 'unsafe-inline' https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css http://localhost:3000/css/styles-signup.css; font-src 'self' data: fonts.gstatic.com;">
 
 <meta name="theme-color" content="#712cf9">
 
@@ -92,7 +90,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles-signup.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
@@ -113,7 +111,7 @@
 
           <input type="hidden" name="gameCalled" value="<%= game %>">
 
-          <a href="flappy"><button class="w-100 btn btn-lg btn-outline-primary" type="submit">Continue</button></a>
+          <button class="w-100 btn btn-lg btn-outline-primary" type="submit">Continue</button>
           <p class="mt-5 mb-3 text-body-secondary white">&copy; Arcade Arena</p>
         </form>
       </main>
