--- a/views/flappy.ejs
+++ b/views/flappy.ejs
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Flappy Bird Game</title>
-    <script src="index.js" defer></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <script src="flappy.js" defer></script>
+    <link rel="stylesheet" href="css/flappy.css">
 </head>
 <body>
     <div class="background"></div>
-    <img src="images/Bird.png" alt="invalid-img" class="bird" id="bird-1">
+    <img src="flappyimages/Bird.png" alt="invalid-img" class="bird" id="bird-1">
     <div class="message">
         Enter to Start Game<p><span style="color:red">&uarr;</span>ArrowUp to Control</p>
     </div>
