--- a/views/galaxy.ejs
+++ b/views/galaxy.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/galaxy.css">
     <title>Galaxy Invaders</title>
 </head>
 <body>
@@ -10,5 +10,5 @@
         <canvas></canvas>
     </div>
 </body>
-<script src="index.js"></script>
+<script src="galaxy.js"></script>
 </html>
