--- a/views/pacman.ejs
+++ b/views/pacman.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/pacman.css">
     <title>Pacman Game</title>
 </head>
     <body>
         <p>Score: <span id="score">0</span>/93</p>
         <div><canvas></canvas></div>
     </body>
-    <script src="index.js"></script>
+    <script src="pacman.js"></script>
 </html>
