--- a/views/galaxy.ejs
+++ b/views/galaxy.ejs
@@ -9,6 +9,9 @@
     <div>
         <canvas></canvas>
     </div>
+    <form action="/galaxy" method="post" id="form">
+        <input type="hidden" id="finalScore" name="finalScore" value="">
+    </form>
 </body>
 <script src="galaxy.js"></script>
 </html>
