pacman and galaxy

--- a/views/pacman.ejs
+++ b/views/pacman.ejs
@@ -10,6 +10,11 @@
     <body>
         <p>Score: <span id="score">0</span>/93</p>
         <div><canvas></canvas></div>
+
+        <form action="/pacman" method="post" id="form">
+            <input type="hidden" id="finalScore" name="finalScore" value="">
+        </form>
+
     </body>
     <script src="pacman.js"></script>
 </html>
