--- a/views/gameover.ejs
+++ b/views/gameover.ejs
@@ -14,8 +14,8 @@
       <img class="logo" src="images/logo.svg" alt="" width="100" height="100">
       <h1 >GAME OVER!</h1>
         <p id="score">Your Score: <%= data.newScore%></p>
-        <p id="highscore">Your High Score: <%= data.oldScore%></p>
-        <p id="global-highscore">Best High Score:</p>
+        <p id="highscore">Your High Score: </p>
+        <p id="global-highscore">Best High Score: <%= data.oldScore%></p>
     </div>
   </body>
 
