flappy backeend added

--- a/views/flappy.ejs
+++ b/views/flappy.ejs
@@ -21,6 +21,9 @@
         <span class="score_title"></span>
         <span class="score_val"></span>
     </div>
+    <form action="/flappy" method="post" id="form">
+        <input type="hidden" id="finalScore" name="finalScore" value="">
+    </form>
     
     
 </body>
