--- a/views/flappy.ejs
+++ b/views/flappy.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <base href="http://localhost:3000/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +24,7 @@
     </div>
     <form action="/flappy" method="post" id="form">
         <input type="hidden" id="finalScore" name="finalScore" value="">
+        <input type="hidden" id="userId" name="userId" value="<%=id%>">
     </form>
     
     
