--- a/views/pacman.ejs
+++ b/views/pacman.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <base href="http://localhost:3000/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/pacman.css">
@@ -13,6 +14,7 @@
 
         <form action="/pacman" method="post" id="form">
             <input type="hidden" id="finalScore" name="finalScore" value="">
+            <input type="hidden" id="userId" name="userId" value="<%=id%>">
         </form>
 
     </body>
