--- a/views/flappy.ejs
+++ b/views/flappy.ejs
@@ -22,7 +22,7 @@
         <span class="score_title"></span>
         <span class="score_val"></span>
     </div>
-    <form action="/flappy" method="post" id="form">
+    <form action="/game/flappy" method="post" id="form">
         <input type="hidden" id="finalScore" name="finalScore" value="">
         <input type="hidden" id="userId" name="userId" value="<%=id%>">
     </form>
