--- a/views/galaxy.ejs
+++ b/views/galaxy.ejs
@@ -11,7 +11,7 @@
         <canvas></canvas>
     </div>
 
-    <form action="/galaxy" method="post" id="form">
+    <form action="/game/galaxy" method="post" id="form">
         <input type="hidden" id="finalScore" name="finalScore" value="">
         <input type="hidden" id="userId" name="userId" value="<%=id%>">
     </form>
