--- a/views/gameover.ejs
+++ b/views/gameover.ejs
@@ -2,6 +2,7 @@
 <html lang="en" data-bs-theme="auto">
   <head>
     <meta charset="utf-8">
+    <base href="http://localhost:3000/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Game Over</title>
 
