--- a/views/pacman.ejs
+++ b/views/pacman.ejs
@@ -12,7 +12,7 @@
         <p>Score: <span id="score">0</span>/93</p>
         <div><canvas></canvas></div>
 
-        <form action="/pacman" method="post" id="form">
+        <form action="/game/pacman" method="post" id="form">
             <input type="hidden" id="finalScore" name="finalScore" value="">
             <input type="hidden" id="userId" name="userId" value="<%=id%>">
         </form>
